<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/whiteColor"
    android:layout_height="match_parent"
    tools:context="com.mostafa.android.pizzahut.MainActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pizzahutdeliverylogo"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/logoColor"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/story"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:textAppearance="?android:textAppearanceMedium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textStyle="italic"
                android:textColor="@color/black"
                android:textAppearance="?android:textAppearanceMedium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website"
                android:textStyle="italic"
                android:textColor="@color/black"
                android:textAppearance="?android:textAppearanceMedium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:textAppearance="?android:textAppearanceMedium"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nophone"
                android:textStyle="italic"
                android:textAppearance="?android:textAppearanceMedium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noaddress"
                android:textStyle="italic"
                android:textAppearance="?android:textAppearanceMedium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nowebsite"
                android:textStyle="italic"
                android:textAppearance="?android:textAppearanceMedium"/>
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:ratingBarStyleIndicator"
                android:text="@string/rating"
                android:rating="4.5"
                android:textStyle="italic"
                android:textAppearance="?android:textAppearanceMedium"/>
        </LinearLayout>

    </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>
